src/test/testFiles/invalid/semanticErrors/undeclaredFunctionCall.manimdsl
fun function(number x, number y): number {
    let z: number = x + x;
    return z;
}

let z = abc(5);